Tue Jan 18 00:56:46 2000  George Lebl <jirka@5z.com>

	* gnome-pixmap.[ch]: fixup the pixmap entry to actually not even
	  create the preview box if the do_preview is false.  This makes
	  it not check the file for being a real image if the preview
	  is off.

2000-01-17  Havoc Pennington  <hp@redhat.com>

	* gnome-stock.c (gnome_stock_pixmap_gdk):
	s/gdk_pixbuf_render_pixbuf/gdk_pixbuf_render_pixbuf_and_mask

	* gnome-calculator.c (gnome_calculator_realized): ditto

	* gnome-init.c (libgnomeui_pixbuf_image_loader): ditto
	
2000-01-16  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-about.c: Draw a line under clickable URLs

2000-01-16  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-cursors.c: Removed the g_print statement.

Mon Jan 17 01:38:21 2000  George Lebl <jirka@5z.com>

	* gnome-calculator.c: don't reduce stack on unary functions, a patch
	  from "W. Adam Foran" <waforan@pathcom.com>

Sun Jan 16 02:45:10 2000  George Lebl <jirka@5z.com>

	* gnome-ditem-edit.[ch]: update for the new gnome-ditem stuff and make
	  it store a ref to any ditem is loads so that information not
	  updated in the gui is not lost.  Also add a whole bunch of
	  preconditions to public methods, fix the header define, added
	  accessors for new widgets, and fixed the ordering in the
	  translations list

2000-01-16  Havoc Pennington  <hp@pobox.com>

	* gnome-pixmap.c (gnome_pixmap_get_draw_vals): new function 
	to get the draw vals

2000-01-15  ERDI Gergo  <cactus@cactus.rulez.org>

	* Removed numerous compile-time warnings

2000-01-15  Havoc Pennington  <hp@pobox.com>

	* gnome-stock.c (gnome_stock_set_icon): set main pixbuf in
	addition to the individual states.	

2000-01-15  Havoc Pennington  <hp@pobox.com>

	* gnome-mdi.c (set_active_view): fix printf format warning

	* gnome-dialog.c (gnome_dialog_button_clicked): remove unused
	variable

	* gnome-pixmap.h: remove the "internal functions" since we no
	longer use any of them	
